fixed the queue animations getting stuck

--- a/public/css/queue.css
+++ b/public/css/queue.css
@@ -59,6 +59,7 @@
         opacity: 0;
     }
     100% {
+        opacity: 0;
         left: -400px;
     }
 }
